--- a/Android/.project
+++ b/Android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>InCarApp</name>
+	<name>DriveDiary</name>
 	<comment></comment>
 	<projects>
 	</projects>
