--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.hyosang.incarapp"
+    package="kr.hyosang.drivediary.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -22,14 +22,13 @@
         android:debuggable="true">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         
-        <activity android:name=".MainActivity" android:label="@string/app_name">
+        <activity android:name="kr.hyosang.drivediary.android.MainActivity" android:label="@string/app_name">
             <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
                  <category android:name="android.intent.category.LAUNCHER" /> 
             </intent-filter>
         </activity>
-        <activity android:name=".SettingActivity" />
-        <service android:name=".service.GpsService" />
+        <activity android:name=".service.GpsServicety" />
         <service android:name=".service.FuelUploadService" />
     </application>
 
