--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
@@ -22,14 +23,20 @@
         android:debuggable="true">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         
-        <activity android:name="kr.hyosang.drivediary.android.MainActivity" android:label="@string/app_name">
+        <activity android:name=".MainActivity" android:label="@string/app_name">
             <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
                  <category android:name="android.intent.category.LAUNCHER" /> 
             </intent-filter>
         </activity>
-        <activity android:name=".service.GpsServicety" />
+        <activity android:name=".SettingActivity" />
+        <service android:name=".service.GpsService" />
         <service android:name=".service.FuelUploadService" />
+        <receiver android:name=".BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
